// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`helpers/mapAction should map action 1`] = `
Object {
  "action": "ACTION MAPPED !",
  "state": Object {},
}
`;

exports[`helpers/mapPayload should map payload (type matcher OK) 1`] = `[Function]`;

exports[`helpers/mapPayload should map payload without matching type 1`] = `[Function]`;

exports[`helpers/mapPayload should not map payload (type matcher is KO) 1`] = `
Object {
  "action": Object {
    "payload": "payload",
    "type": "TYPE",
  },
  "state": Object {},
}
`;

exports[`helpers/mapState should map state (type matcher OK) 1`] = `
Object {
  "action": Object {
    "payload": "payload",
    "type": "CUSTOM",
  },
  "state": "STATE MAPPED !",
}
`;

exports[`helpers/mapState should map state (type matcher is KO) 1`] = `
Object {
  "action": Object {
    "payload": "payload",
    "type": "CUSTOM",
  },
  "state": "STATE",
}
`;

exports[`helpers/mapState should map state without matching type 1`] = `
Object {
  "action": Object {
    "payload": "payload",
    "type": "CUSTOM",
  },
  "state": "STATE MAPPED !",
}
`;

exports[`helpers/reducer should add reducer but not change state 1`] = `
Object {
  "action": Object {
    "payload": "payload",
    "type": "TYPE",
  },
  "state": Object {},
}
`;

exports[`helpers/reducer should add reducer to change state 1`] = `
Object {
  "action": Object {
    "payload": "payload",
    "type": "CUSTOM",
  },
  "state": "CUSTOM_STATE",
}
`;
